fix spacing for loginButtons. change cursor to pointer on footer links

--- a/client/css/grayscale.css
+++ b/client/css/grayscale.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif !important;
     color: #fff;
     background-color: #000;
 }
@@ -18,7 +18,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif !important;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -472,7 +472,7 @@ body {
   right: 20px !important;
 }
 
-#extendedSignup .login-wrapper {
+.login-wrapper {
   padding: 15px;
 }
 
@@ -493,4 +493,8 @@ body {
 
 #forgot-password-link {
   display: none;
+}
+
+.footer-link {
+  cursor: pointer;
 }
